# waku-agent

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: launch.json
docs/: DEMO-CHECKLIST.md  benchmarks.md  filming-prompts.md
docs/whiteboards/: waku-architecture.excalidraw
evals/: coding.jsonl  dataset.jsonl
evals/deterministic/: test_all_history.py  test_coding_eval.py  test_compare_history.py  test_delegate.py  test_episodic_store_switch.py  test_history_window.py  test_judge.py  test_models.py  test_pinned_models.py  test_providers.py  test_scoring.py  test_session_resume.py  test_session_rotation.py  test_shootout.py  test_tool_trigger.py  test_trace_encoding.py  test_turn_meta.py  test_wake_word.py  test_workspace.py
jarvis/: __init__.py  __main__.py  app.py  config.py  db.py
jarvis/gateway/: cli.py  voice.py
jarvis/loop/: agent.py  models.py
jarvis/ops/: dashboard.py
jarvis/ops/static/: app.js
jarvis/runtime/: session.py
jarvis/tools/: __init__.py  calendar.py  messages.py  notes.py  registry.py
scripts/: shootout.py
waku/: __main__.py  app.py  config.py  db.py
waku/gateway/: discord.py  voice.py
waku/loop/: models.py
waku/memory/: __init__.py
waku/ops/: coding_eval.py  compare_history.py  dashboard.py  judge.py  scoring.py  tracing.py
waku/ops/static/: README.md  app.js  index.html  style.css
waku/ops/static/js/: compare.js  diagram.js  dock.js  main.js  memory.js  models.js  render.js  util.js  views.js
waku/runtime/: session.py
waku/tools/: __init__.py  experimental.py  workspace.py
